--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       useEmojis: true,
 
       // AI (LOCAL / DEV ONLY). Never expose a production key in public HTML.
-      aiApiKey: "",
+      aiApiKey: "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",
       aiModel: "meta-llama/llama-4-scout-17b-16e-instruct",
     };
   </script>
@@ -733,3 +733,4 @@
   </script>
 </body>
 </html>
+
